@@ -5,7 +5,6 @@ import dev.nandi0813.practice.manager.arena.arenas.interfaces.BasicArena;
 import dev.nandi0813.practice.manager.fight.match.Match;
 import dev.nandi0813.practice.manager.fight.match.enums.RoundStatus;
 import org.bukkit.entity.Player;
-import org.bukkit.metadata.MetadataValue;
 
 public enum ListenerUtil {
     ;
@@ -25,7 +24,7 @@ public enum ListenerUtil {
             buildLimit = arena.getBuildMaxValue();
         else {
             if (arena instanceof FFAArena) {
-                buildLimit = arena.getFfaPositions().get(0).getBlockY() + arena.getBuildMaxValue();
+                buildLimit = arena.getFfaPositions().getFirst().getBlockY() + arena.getBuildMaxValue();
             } else {
                 buildLimit = arena.getPosition1().getBlockY() + arena.getBuildMaxValue();
             }
@@ -34,8 +33,8 @@ public enum ListenerUtil {
         return buildLimit;
     }
 
-    public static boolean checkMetaData(MetadataValue metadataValue) {
-        return metadataValue == null || metadataValue.value() == null;
+    public static boolean checkMetaData(Object metadataValue) {
+        return metadataValue == null;
     }
 
 }
