@@ -2,10 +2,12 @@ package dev.nandi0813.practice.manager.profile.group;
 
 import dev.nandi0813.practice.ZonePractice;
 import dev.nandi0813.practice.manager.backend.ConfigFile;
+import dev.nandi0813.practice.manager.backend.ConfigManager;
 import dev.nandi0813.practice.manager.profile.Profile;
 import dev.nandi0813.practice.manager.profile.ProfileManager;
 import dev.nandi0813.practice.manager.sidebar.SidebarManager;
 import dev.nandi0813.practice.util.Common;
+import dev.nandi0813.practice.util.NameFormatUtil;
 import lombok.Getter;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
@@ -14,9 +16,12 @@ import org.bukkit.entity.Player;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 
 @Getter
 public class GroupManager extends ConfigFile {
+
+    private static final int DEFAULT_PARTY_MEMBER_LIMIT = ConfigManager.getInt("PARTY.SETTINGS.MAX-PARTY-MEMBERS.DEFAULT");
 
     private static GroupManager instance;
 
@@ -34,7 +39,7 @@ public class GroupManager extends ConfigFile {
     }
 
     public void loadGroups() {
-        for (String groupName : this.config.getConfigurationSection("GROUPS").getKeys(false)) {
+        for (String groupName : Objects.requireNonNull(this.config.getConfigurationSection("GROUPS")).getKeys(false)) {
             String chatFormat = null;
             if (this.config.isSet("GROUPS." + groupName + ".CHAT-FORMAT"))
                 chatFormat = this.getString("GROUPS." + groupName + ".CHAT-FORMAT");
@@ -46,6 +51,16 @@ public class GroupManager extends ConfigFile {
                 }
             }
 
+            String prefixTemplate = this.getString("GROUPS." + groupName + ".LOBBY-NAMETAG.PREFIX");
+            String nameTemplate = this.config.isSet("GROUPS." + groupName + ".LOBBY-NAMETAG.NAME")
+                    ? this.getString("GROUPS." + groupName + ".LOBBY-NAMETAG.NAME")
+                    : "<gray>%player%";
+            String suffixTemplate = this.getString("GROUPS." + groupName + ".LOBBY-NAMETAG.SUFFIX");
+
+            Component nameFormat = this.config.isSet("GROUPS." + groupName + ".LOBBY-NAMETAG.NAME")
+                    ? NameFormatUtil.parseConfiguredComponent(nameTemplate)
+                    : Component.text("%player%", NamedTextColor.GRAY);
+
             Group group = new Group(
                     groupName,
                     this.getString("GROUPS." + groupName + ".NAME"),
@@ -53,11 +68,18 @@ public class GroupManager extends ConfigFile {
                     this.getInt("GROUPS." + groupName + ".UNRANKED-PER-DAY"),
                     this.getInt("GROUPS." + groupName + ".RANKED-PER-DAY"),
                     this.getInt("GROUPS." + groupName + ".EVENT-START-PER-DAY"),
+                    this.getInt("GROUPS." + groupName + ".PARTY-BROADCAST-PER-DAY"),
+                    this.config.isInt("GROUPS." + groupName + ".PARTY-MEMBER-LIMIT")
+                            ? this.getInt("GROUPS." + groupName + ".PARTY-MEMBER-LIMIT")
+                            : DEFAULT_PARTY_MEMBER_LIMIT,
                     this.getInt("GROUPS." + groupName + ".CUSTOM-KIT"),
                     this.getInt("GROUPS." + groupName + ".MODIFIABLE-KIT-PER-LADDER"),
-                    ZonePractice.getMiniMessage().deserialize(this.getString("GROUPS." + groupName + ".LOBBY-NAMETAG.PREFIX")),
-                    NamedTextColor.NAMES.valueOr(this.getString("GROUPS." + groupName + ".LOBBY-NAMETAG.NAME-COLOR").toLowerCase(), NamedTextColor.WHITE),
-                    ZonePractice.getMiniMessage().deserialize(this.getString("GROUPS." + groupName + ".LOBBY-NAMETAG.SUFFIX")),
+                    prefixTemplate,
+                    NameFormatUtil.parseConfiguredComponent(prefixTemplate),
+                    nameTemplate,
+                    nameFormat,
+                    suffixTemplate,
+                    NameFormatUtil.parseConfiguredComponent(suffixTemplate),
                     this.getInt("GROUPS." + groupName + ".LOBBY-NAMETAG.SORT-PRIORITY"),
                     chatFormat,
                     sidebarExtension);
@@ -81,7 +103,7 @@ public class GroupManager extends ConfigFile {
         Profile profile = ProfileManager.getInstance().getProfile(player);
         if (profile.getPlayer().isOp()) {
             try {
-                profile.setGroup(groups.get(groups.size() - 1));
+                profile.setGroup(groups.getLast());
             } catch (Exception e) {
                 Common.sendConsoleMMMessage("<red>Failed to set group for " + profile.getPlayer().getName() + "! Error: " + e.getMessage());
             }
@@ -106,7 +128,7 @@ public class GroupManager extends ConfigFile {
 
         // If player has no permissions for any group, assign them to the lowest weighted group (default)
         if (currentGroup == null && !groups.isEmpty()) {
-            currentGroup = groups.get(0); // First group in sorted list = lowest weight
+            currentGroup = groups.getFirst(); // First group in sorted list = lowest weight
         }
 
         return currentGroup;
